--- a/applications/dashboard/design/embed.css
+++ b/applications/dashboard/design/embed.css
@@ -15,6 +15,8 @@ applications.
     padding: 6px 2px 0 !important;
 }
 
+/* sup */
+
 .vanilla-anchor,
 .vanilla-anchor:hover {
     font-size: 9px !important;
